refactor: fighter and skill

--- a/index.html
+++ b/index.html
@@ -21,10 +21,24 @@
 </head>
 <body>
     <div id="renderDiv"></div>
+    <!-- Configuration -->
     <script src="src/config/characters.js"></script>
+
+    <!-- Base Fighter -->
     <script src="src/characters/Fighter.js"></script>
+
+    <!-- Doge Skills -->
+    <script src="src/characters/doge/skills/MuchWowSkill.js"></script>
+    <script src="src/characters/doge/skills/ToTheMoonSkill.js"></script>
+
+    <!-- Doge Character -->
+    <script src="src/characters/doge/Doge.js"></script>
+
+    <!-- Scenes -->
     <script src="src/scenes/PreparationScene.js"></script>
     <script src="src/scenes/BattleScene.js"></script>
+
+    <!-- Main Game -->
     <script src="src/game.js"></script>
 </body>
 </html> 
