--- a/index.html
+++ b/index.html
@@ -34,9 +34,26 @@
     <!-- Doge Character -->
     <script src="src/characters/doge/Doge.js"></script>
 
+    <!-- Shiba Skills -->
+    <script src="src/characters/shiba/skills/ShibaSlashSkill.js"></script>
+    <script src="src/characters/shiba/skills/InuImpactSkill.js"></script>
+
+    <!-- Shiba Character -->
+    <script src="src/characters/shiba/Shiba.js"></script>
+
+    <!-- Pepe Skills -->
+    <script src="src/characters/pepe/skills/PepeSkill1.js"></script>
+    <script src="src/characters/pepe/skills/PepeSkill2.js"></script>
+
+    <!-- Pepe Character -->
+    <script src="src/characters/pepe/Pepe.js"></script>
+
     <!-- Scenes -->
     <script src="src/scenes/PreparationScene.js"></script>
     <script src="src/scenes/BattleScene.js"></script>
+
+    <!-- Test Scenes -->
+    <script src="src/scenes/TestPepeScene.js"></script>
 
     <!-- Main Game -->
     <script src="src/game.js"></script>
