chore: add doge and shiba

--- a/index.html
+++ b/index.html
@@ -31,11 +31,25 @@
     <script src="src/characters/FighterFactory.js"></script>
     <script src="src/characters/GenericFighter.js"></script>
     <script src="src/characters/GenericSkill.js"></script>
+    
+    <!-- Doge Fighter -->
+    <script src="src/characters/doge/skills/DogeSkill1.js"></script>
+    <script src="src/characters/doge/skills/DogeSkill2.js"></script>
+    <script src="src/characters/doge/Doge.js"></script>
+    
+    <!-- Shiba Fighter -->
+    <script src="src/characters/shiba/skills/ShibaSkill1.js"></script>
+    <script src="src/characters/shiba/skills/ShibaSkill2.js"></script>
+    <script src="src/characters/shiba/Shiba.js"></script>
 
     <!-- Scenes -->
     <script src="src/scenes/PreparationScene.js"></script>
     <script src="src/scenes/BattleScene.js"></script>
     <script src="src/scenes/TestFighterScene.js"></script>
+    <script src="src/scenes/TestPepeScene.js"></script>
+    <script src="src/scenes/TestTrumpScene.js"></script>
+    <script src="src/scenes/TestDogeScene.js"></script>
+    <script src="src/scenes/TestShibaScene.js"></script>
 
     <!-- Main Game -->
     <script src="src/game.js"></script>
