feat: pengu and brett

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <script src="src/characters/shiba/skills/ShibaSkill2.js"></script>
     <script src="src/characters/shiba/Shiba.js"></script>
 
+    <!-- Pengu Fighter -->
+    <script src="src/characters/pengu/skills/PenguSkill1.js"></script>
+    <script src="src/characters/pengu/skills/PenguSkill2.js"></script>
+    <script src="src/characters/pengu/Pengu.js"></script>
+
+    <!-- Brett Fighter -->
+    <script src="src/characters/brett/skills/BrettSkill1.js"></script>
+    <script src="src/characters/brett/skills/BrettSkill2.js"></script>
+    <script src="src/characters/brett/Brett.js"></script>
+
     <!-- Scenes -->
     <script src="src/scenes/PreparationScene.js"></script>
     <script src="src/scenes/BattleScene.js"></script>
@@ -50,6 +60,8 @@
     <script src="src/scenes/TestTrumpScene.js"></script>
     <script src="src/scenes/TestDogeScene.js"></script>
     <script src="src/scenes/TestShibaScene.js"></script>
+    <script src="src/scenes/TestPenguScene.js"></script>
+    <script src="src/scenes/TestBrettScene.js"></script>
 
     <!-- Main Game -->
     <script src="src/game.js"></script>
