feat: code adjustment

--- a/auth.html
+++ b/auth.html
@@ -99,6 +99,10 @@
         </div>
     </div>
 
+    <!-- Configuration -->
+    <script src="src/config/api-config.js"></script>
+    
+    <!-- Authentication Module -->
     <script src="src/auth/auth.js"></script>
 </body>
 </html> 
