fix: flow, api integration

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
     <script src="src/scenes/TestBrettScene.js"></script>
     <script src="src/scenes/PreparationScene.js"></script>
     <script src="src/scenes/BattleScene.js"></script>
+    <script src="src/scenes/SearchingMatchScene.js"></script>
+    <script src="src/scenes/PausedScene.js"></script>
+    <script src="src/scenes/EmergencyFundScene.js"></script>
+    <script src="src/scenes/ClaimDistributionScene.js"></script>
     
     <!-- Main Game -->
     <script src="src/game.js"></script>
